# Defai-experiments

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  models.py  package-lock.json  package.json  pyproject.toml  strategy.py
eth-sdk/: config.ts
presets/default/: config.json  env  permissions.json
scripts/: create-permissions.ts
states/: initialization.py  monitor_price.py  provide_liquidity.py  rebalance.py  swap_usdc_to_eth.py  teardown.py
templates/: persistent_state_template.json
